--- a/frontend/src/app/components/layouts/podcast/podcast.component.html
+++ b/frontend/src/app/components/layouts/podcast/podcast.component.html
@@ -27,8 +27,8 @@
                 <div class="content">
                     <h3>{{blog.title}}</h3>
                     <p>{{blog.content}}</p>
-                    <a href="#" data-toggle="modal" data-target="#update_blog_modal" class="default-btn">Update</a>
-                    <a href="#" style="margin-left:30px" data-toggle="modal" data-target="#delete_blog_modal"
+                    <a (click)="update_blog(blog.id)" data-toggle="modal" data-target="#update_blog_modal" class="default-btn">Update</a>
+                    <a (click)="delete_blog(blog.id)"  style="margin-left:30px" data-toggle="modal" data-target="#delete_blog_modal"
                         class="default-btn">Delete</a>
                 </div>
             </div>
@@ -107,8 +107,7 @@
                         </div>
 
                         <div style="float:right; margin-top:20px;">
-                            <button type="submit" class="default-btn">Yes</button>
-                            <button style="margin-left:10px" type="submit" class="default-btn">Cancel</button>
+                            <button href="#" type="submit" class="default-btn">Yes</button>
                         </div>
 
 
