added patch for update blog and delete blog

--- a/frontend/src/app/components/layouts/blog/blog.component.html
+++ b/frontend/src/app/components/layouts/blog/blog.component.html
@@ -5,14 +5,15 @@
             <h2>Keep upto date with the latest quizine </h2>
         </div>
 
-        
+
         <div class="row" *ngFor="let blog of blog_posts;let i = index">
 
             <!-- Blog Card -->
             <div class="col-lg-6 col-md-12">
                 <div class="single-blog-post">
                     <div class="post-image">
-                        <a routerLink="/blog-details">
+                        <!--<a routerLink="/blog-details">-->
+                        <a>
                             <img src="assets/img/foo_placeholder.jpg" alt="image">
                         </a>
                     </div>
