--- a/frontend/src/app/components/layouts/podcast/podcast.component.html
+++ b/frontend/src/app/components/layouts/podcast/podcast.component.html
@@ -27,8 +27,8 @@
                 <div class="content">
                     <h3>{{blog.title}}</h3>
                     <p>{{blog.content}}</p>
-                    <a (click)="update_blog(blog.id)" data-toggle="modal" data-target="#update_blog_modal" class="default-btn">Update</a>
-                    <a (click)="delete_blog(blog.id)"  style="margin-left:30px" data-toggle="modal" data-target="#delete_blog_modal"
+                    <a (click)="set_blog_id(blog.id)" data-toggle="modal" data-target="#update_blog_modal" class="default-btn">Update</a>
+                    <a (click)="set_blog_id(blog.id)" style="margin-left:30px" data-toggle="modal" data-target="#delete_blog_modal"
                         class="default-btn">Delete</a>
                 </div>
             </div>
@@ -51,40 +51,44 @@
             </button>
 
             <div class="modal-body">
-                <form id="contactForm">
+                
+                <div [formGroup]="blogForm">
+
                     <div class="row">
                         <h3 style="padding:10px">Update Blog Post</h3>
                         <div class="col-lg-12 col-md-12">
                             <div class="form-group">
-                                <input type="text" name="title" id="title" class="form-control" placeholder="Title">
+                                <input formControlName="title" type="text" name="title" id="title" class="form-control" placeholder="Title">
                             </div>
                         </div>
 
                         <div class="col-lg-12 col-md-12">
                             <div class="form-group">
-                                <input type="text" name="status" id="status" class="form-control" placeholder="Status">
+                                <input formControlName="status" type="text" name="status" id="status" class="form-control" placeholder="Status">
                             </div>
                         </div>
 
                         <div class="col-lg-12 col-md-12">
                             <div class="form-group">
-                                <input type="text" name="category" id="category" class="form-control"
+                                <input formControlName="category" type="text" name="category" id="category" class="form-control"
                                     placeholder="Category">
                             </div>
                         </div>
 
                         <div class="col-lg-12 col-md-12">
                             <div class="form-group">
-                                <textarea name="content" class="form-control" id="content" cols="30" rows="5"
+                                <textarea formControlName="content" name="content" class="form-control" id="content" cols="30" rows="5"
                                     placeholder="Content"></textarea>
                             </div>
                         </div>
 
                         <div class="col-lg-12 col-md-12">
-                            <button type="submit" class="default-btn">Update Blog Post</button>
+                            <button (click)="update_blog()" data-toggle="modal" data-target="#update_blog_modal" type="submit" class="default-btn">Update Blog Post</button>
                         </div>
                     </div>
-                </form>
+
+                </div>
+
             </div>
         </div>
     </div>
@@ -107,9 +111,8 @@
                         </div>
 
                         <div style="float:right; margin-top:20px;">
-                            <button href="#" type="submit" class="default-btn">Yes</button>
+                            <button (click)="delete_blog()" data-toggle="modal" data-target="#delete_blog_modal" type="submit" class="default-btn">Yes</button>
                         </div>
-
 
                     </div>
                 </form>
