--- a/frontend/src/app/components/layouts/navbar/navbar.component.html
+++ b/frontend/src/app/components/layouts/navbar/navbar.component.html
@@ -17,7 +17,7 @@
                 <li class="nav-item"><a class="nav-link" href="#blog">Trending</a></li>
                 
                 <!-- Display this if user is not logged in -->
-                <li *ngIf="user_id == undefined" class="nav-item"><a class="nav-link" href="#contact">Register</a></li>
+                <!--<li *ngIf="user_id == undefined" class="nav-item"><a class="nav-link" href="#contact">Register</a></li>-->
 
                 <!-- Display this when user is logged in -->
                 <li *ngIf="user_id != undefined" class="nav-item"><a href="#" class="nav-link new_blog_post_btn" data-toggle="modal" data-target="#create_blog_modal">Create New Post</a></li>
